feat: complete feedback section

--- a/online-zoo/assets/sass-css/base/colors.scss
+++ b/online-zoo/assets/sass-css/base/colors.scss
@@ -6,7 +6,7 @@ $red: #D31414;
 $black-blue: #333B41;
 $gray: #767474;
 $gray-smoky: #ABABAB;
-$light-gray: #F1F3F2;
+$gray-light: #F1F3F2;
 $frosted-glass-white: #FDFDFF;
 $black: #000000;
 $white: #FFFFFF;
