--- a/online-zoo/assets/sass-css/pages/main-page.css
+++ b/online-zoo/assets/sass-css/pages/main-page.css
@@ -30,32 +30,38 @@
   src: url("../../fonts/Roboto/roboto-v30-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""), url("../../fonts/Roboto/roboto-v30-latin-700.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto/roboto-v30-latin-700.woff2") format("woff2"), url("../../fonts/Roboto/roboto-v30-latin-700.woff") format("woff"), url("../../fonts/Roboto/roboto-v30-latin-700.ttf") format("truetype"), url("../../fonts/Roboto/roboto-v30-latin-700.svg#Roboto") format("svg"); /* Legacy iOS */
 }
-.backstage-text h2 {
+.pick-info h2, .backstage-text h2 {
   font-size: 48px;
   font-weight: 400;
   line-height: 120%;
 }
 
-.backstage-text h4 {
+.testimonials h3, .pick-instruction h3 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 130%;
+}
+
+.pick-info h4, .backstage-text h4 {
   font-size: 24px;
   font-weight: 400;
   line-height: 120%;
 }
 
-.text .type, .button-watch .watch-link {
+.feedback-button, .pick-button a, .choose-button, .text .type, .button-watch .watch-link {
   font-size: 16px;
   font-weight: 500;
   line-height: 140%;
   text-transform: uppercase;
 }
 
-.backstage-text .goals, .backstage-text .about-site {
+.text-information .name, .process-card .subtitle, .pick-info .subtitle-3, .pick-info .subtitle-2, .pick-info .subtitle-1, .backstage-text .goals, .backstage-text .about-site {
   font-size: 16px;
   font-weight: 400;
   line-height: 140%;
 }
 
-.text .area {
+.text-information .country-date, .feedback-card-container .feed-card .card-text, .text .area {
   font-size: 15px;
   font-weight: 300;
   line-height: 120%;
@@ -93,38 +99,44 @@
   src: url("../../fonts/Roboto/roboto-v30-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""), url("../../fonts/Roboto/roboto-v30-latin-700.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto/roboto-v30-latin-700.woff2") format("woff2"), url("../../fonts/Roboto/roboto-v30-latin-700.woff") format("woff"), url("../../fonts/Roboto/roboto-v30-latin-700.ttf") format("truetype"), url("../../fonts/Roboto/roboto-v30-latin-700.svg#Roboto") format("svg"); /* Legacy iOS */
 }
-.backstage-text h2 {
+.pick-info h2, .backstage-text h2 {
   font-size: 48px;
   font-weight: 400;
   line-height: 120%;
 }
 
-.backstage-text h4 {
+.testimonials h3, .pick-instruction h3 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 130%;
+}
+
+.pick-info h4, .backstage-text h4 {
   font-size: 24px;
   font-weight: 400;
   line-height: 120%;
 }
 
-.text .type, .button-watch .watch-link {
+.feedback-button, .pick-button a, .choose-button, .text .type, .button-watch .watch-link {
   font-size: 16px;
   font-weight: 500;
   line-height: 140%;
   text-transform: uppercase;
 }
 
-.backstage-text .goals, .backstage-text .about-site {
+.text-information .name, .process-card .subtitle, .pick-info .subtitle-3, .pick-info .subtitle-2, .pick-info .subtitle-1, .backstage-text .goals, .backstage-text .about-site {
   font-size: 16px;
   font-weight: 400;
   line-height: 140%;
 }
 
-.text .area {
+.text-information .country-date, .feedback-card-container .feed-card .card-text, .text .area {
   font-size: 15px;
   font-weight: 300;
   line-height: 120%;
 }
 
-.choose-button, .button-watch .watch-link {
+.pick-button a, .choose-button, .button-watch .watch-link, .feedback-button {
   width: 298px;
   height: 54px;
   border-radius: 25px;
@@ -136,12 +148,21 @@
   text-transform: uppercase;
 }
 
-.choose-button:hover, .pets .button:hover, .button-watch .watch-link:hover {
+.pick-button a:hover, .choose-button:hover, .pets .button:hover, .button-watch .watch-link:hover {
   background: #E47209;
 }
 
-.choose-button:active, .pets .button:active, .button-watch .watch-link:active {
+.pick-button a:active, .choose-button:active, .pets .button:active, .button-watch .watch-link:active {
   background: #4B9200;
+}
+
+.pick-button a[disabled] {
+  background: #767474;
+}
+
+.feedback-button {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  border-radius: 5px;
 }
 
 .page {
@@ -153,7 +174,6 @@
 
 .container {
   width: 1160px;
-  border: 1px solid black;
 }
 
 .header {
@@ -177,7 +197,6 @@
   border: 1px solid white;
 }
 .header .container .logo h1 {
-  width: 72.49px;
   font-size: 19.0145px;
   font-weight: 400;
   line-height: 120%;
@@ -237,7 +256,7 @@
   border-radius: 50%;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
   position: relative;
-  margin-right: 108px;
+  margin-right: 109px;
 }
 .watch-online .container .round .tagline {
   font-size: 106.496px;
@@ -267,10 +286,6 @@
   margin-right: 98px;
 }
 .button-watch .watch-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
 }
 .active {
@@ -279,7 +294,7 @@
 
 .backstage {
   height: 605px;
-  background: no-repeat calc(100% + 27px) url("../../images/flower-photo-1.png");
+  background: no-repeat calc(100% + 97px) url("../../images/flower-photo-1.png");
   background-position-y: 15px;
   display: flex;
   justify-content: center;
@@ -343,6 +358,7 @@
   column-gap: 30px;
 }
 .cards .card-item {
+  height: 426px;
   display: flex;
   flex-direction: column;
   border: 1px solid #F9804B;
@@ -390,18 +406,20 @@
 
 .card-icon {
   display: flex;
+  justify-content: flex-end;
+  width: 43px;
 }
 
 .card-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 8px 12px 14px 16px;
+  margin: 9px 9px 9px 16px;
 }
 
 .choose-button {
   background-color: #FE9013;
-  margin-top: 80px;
+  margin-top: 82px;
   margin-bottom: 100px;
 }
 .pets-container {
@@ -422,7 +440,208 @@
 }
 
 .pick-feed {
-  height: 500px;
+  background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  color: #333B41;
+  padding: 69px 0 100px;
+}
+.pick-feed .container {
+  max-width: 1160px;
+  background: rgba(253, 253, 255, 0.52);
+  backdrop-filter: blur(2px);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pick-instruction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.pick-info {
+  margin-top: 42px;
+}
+.pick-info .description {
+  padding-right: 55px;
+  padding-left: 99px;
+}
+.pick-info h2 {
+  color: #FE9013;
+  text-align: center;
+}
+.pick-info h4 {
+  margin-top: 30px;
+}
+.pick-info .subtitle-1 {
+  font-weight: 500;
+  line-height: 130%;
+  margin-top: 40px;
+}
+.pick-info .subtitle-2 {
+  line-height: 130%;
+  margin-top: 11px;
+}
+.pick-info .subtitle-3 {
+  line-height: 130%;
+}
+.pick-info .subtitle-3 a {
+  padding-bottom: 2px;
+  color: #333B41;
+  text-decoration: none;
+  border-bottom: 1px solid #FE9013;
+}
+
+.pick-instruction {
+  margin-top: 61px;
+}
+.pick-instruction .process {
+  display: flex;
+  margin-top: 40px;
+  gap: 30px;
+  align-items: center;
+}
+
+.process-card {
+  max-width: 168px;
+  height: 244px;
+}
+.process-card .icon {
+  width: 168px;
+  height: 168px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  border: 1px solid #F9804B;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.process-card .subtitle {
+  margin-top: 30px;
+}
+
+.arrow {
+  margin-bottom: 83px;
+}
+.arrow img {
+  width: 69px;
+}
+
+.pick-button {
+  margin-top: 60px;
+  margin-bottom: 59px;
+}
+.pick-button a {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+}
+.pick-button a[disabled]:hover {
+  cursor: default;
+}
+
+.testimonials {
+  display: flex;
+  justify-content: center;
+  padding: 140px 220px 180px;
+  background: no-repeat right calc(100% + 134px) url("../../images/leav.png");
+}
+.testimonials .testimonials-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.testimonials h3 {
+  color: #333B41;
+}
+.testimonials .cards {
+  margin-top: 47px;
+  display: grid;
+  grid-template-columns: repeat(4, 268px);
+  gap: 30px;
+}
+.testimonials .scroll-bar {
+  width: 599px;
+  height: 8px;
+  background-color: #F5F7F6;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+.testimonials .scroll-bar .scroll {
+  width: 115px;
+  height: 6px;
+  background-color: #FE9013;
+  border-radius: 5px;
+}
+
+.feedback-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 268px;
+  height: 391px;
+  border-radius: 20px;
+  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+.feedback-card-container .feed-card {
+  width: 264px;
+  height: 387px;
+  background-color: #F1F3F2;
+  border-radius: 19px;
+  padding: 13px 15px 19px;
+}
+.feedback-card-container .feed-card .card-text {
+  color: #767474;
+  margin-top: 9px;
+  height: 309px;
+  overflow: hidden;
+}
+
+.feed-card-info {
+  display: flex;
+  gap: 10px;
+}
+.feed-card-info .user-pic {
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  background-size: cover;
+}
+.feed-card-info .pic-1 {
+  background: no-repeat center url("../../images/icons/user.svg");
+}
+.feed-card-info .pic-2 {
+  background: no-repeat center url("../../images/oskar.png");
+}
+.feed-card-info .pic-3 {
+  background: no-repeat center url("../../images/fredericka.png");
+}
+.feed-card-info .pic-4 {
+  background: no-repeat center url("../../images/mila.png");
+}
+
+.text-information {
+  display: flex;
+  flex-direction: column;
+}
+.text-information .country-date {
+  display: flex;
+  align-items: center;
+  color: #BDBDBD;
+  gap: 6px;
+}
+.text-information .country-date .dot {
+  width: 2px;
+  height: 2px;
+  background-color: #BDBDBD;
+  border-radius: 50%;
+}
+
+.testimonials-button {
+  margin-top: 31px;
+  align-self: flex-start;
 }
 
 /*# sourceMappingURL=main-page.css.map */
