--- a/online-zoo/assets/sass-css/base/buttons.scss
+++ b/online-zoo/assets/sass-css/base/buttons.scss
@@ -22,6 +22,12 @@
   background: $green;
 }
 
-%button-disables {
+%button-disabled {
   background: $gray;
+}
+
+%button-square {
+  @extend %button-default;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  border-radius: 5px;
 }
