--- a/online-zoo/assets/sass-css/pages/main-page.scss
+++ b/online-zoo/assets/sass-css/pages/main-page.scss
@@ -1,6 +1,7 @@
 @import "../base/colors";
 @import "../base/typography";
 @import "../base/buttons";
+@import "../components/footer";
 
 .page {
   width: 100vw;
@@ -13,6 +14,29 @@
   width: 1160px;
 }
 
+.logo {
+  font-family: "Roboto";
+  width: 82px;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border: 1px solid white;
+  color: $white;
+
+  .logo-header {
+    font-size: 19.0145px;
+    font-weight: 400;
+    line-height: 120%;
+    color: $white;
+    padding: 3.55px 5px;
+    border-radius: 2px;
+    text-align: center;
+
+  }
+}
+
 
 .header {
   height: 80px;
@@ -23,29 +47,6 @@
   .container {
     display: flex;
     align-items: center;
-
-    .logo {
-      font-family: "Roboto";
-      width: 82px;
-      height: 52px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      border: 1px solid white;
-
-
-      h1 {
-        font-size: 19.0145px;
-        font-weight: 400;
-        line-height: 120%;
-        color: $white;
-        padding: 3.55px 5px;
-        border-radius: 2px;
-        text-align: center;
-
-      }
-    }
   }
 }
 
@@ -630,5 +631,22 @@
   @extend %font-button;
   @extend %button-square;
 
+  &:hover {
+    @extend %button-hover;
+  }
+
+  &:active {
+    @extend %button-active;
+  }
+
+  &[disabled] {
+    @extend %button-disabled;
+
+    &:hover {
+      cursor: default;
+    }
+  }
 }
+
+
 
