fix: arrows at pets slider

--- a/online-zoo/assets/sass-css/pages/main-page.scss
+++ b/online-zoo/assets/sass-css/pages/main-page.scss
@@ -358,6 +358,13 @@
   display: flex;
   align-items: center;
   gap: 20px;
+
+}
+
+.icon-arrow-right {
+  img {
+    transform: rotateY(180deg);
+  }
 }
 
 .pick-feed {
