--- a/online-zoo/assets/sass-css/pages/main-page.css
+++ b/online-zoo/assets/sass-css/pages/main-page.css
@@ -574,6 +574,10 @@ footer .donate-footer-button .donate-footer[disabled]:hover {
   gap: 20px;
 }
 
+.icon-arrow-right img {
+  transform: rotateY(180deg);
+}
+
 .pick-feed {
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   opacity: 0.9;
